Added a layout for 'page type' pages

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -5,7 +5,15 @@
           <h1>
               <%= config.title %>
           </h1>
-          <% if (config.subtitle) { %>
+          <% if (is_home() && config.subtitle) { %>
+          <h2>
+              <%= config.subtitle %>
+          </h2>
+          <% } else if (page.title) { %>
+          <h2>
+              <%= page.title %>
+          </h2>
+          <% } else if (config.subtitle) { %>
           <h2>
               <%= config.subtitle %>
           </h2>
