Change style of h4, h5, h6 and hr elements

--- a/source/css/_extend.styl
+++ b/source/css/_extend.styl
@@ -13,7 +13,7 @@ $base-style
         font-size: 1em
         color: color-grey
     hr
-        border: 1px dashed color-border
+        border: 1px dashed $color-light
     strong
         font-weight: bold
     em, cite
