--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -107,6 +107,9 @@ body
     font-size: 1rem
     font-weight: normal
     color: $color-light
+    border-bottom: 1px dashed $color-light
+    display: inline
+    text-decoration: none
 
   h3,
   h4,
