--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -18,10 +18,10 @@
     <!-- title -->
     <title><%= page.title ? page.title : config.title %></title>
     <!-- styles -->
-    <%- css('vendor/font-awesome/css/font-awesome.min') %>
-    <%- css('vendor/meslo-LG/styles') %>
-    <%- css('vendor/justified-gallery/justifiedGallery.min.css') %>
+    <%- css('lib/font-awesome/css/font-awesome.min') %>
+    <%- css('lib/meslo-LG/styles') %>
+    <%- css('lib/justified-gallery/justifiedGallery.min.css') %>
     <%- css('css/style') %>
     <!-- jquery -->
-    <%- js('vendor/jquery/jquery.min') %>
+    <%- js('lib/jquery/jquery.min') %>
 </head>
