--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -22,6 +22,13 @@
     <%- css('lib/meslo-LG/styles') %>
     <%- css('lib/justified-gallery/justifiedGallery.min.css') %>
     <%- css('css/style') %>
+    <!-- rss -->
+    <% if (theme.rss === '' && config.feed && config.feed.path) { %>
+      <% theme.rss = config.feed.path %>
+    <% } %>
+    <% if (theme.rss) { %>
+      <link rel="alternate" href="<%= url_for(theme.rss) %>" title="<%= config.title %>" type="application/atom+xml" />
+    <% } %>
     <!-- jquery -->
     <%- js('lib/jquery/jquery.min') %>
 </head>
