--- a/layout/_partial/comments.ejs
+++ b/layout/_partial/comments.ejs
@@ -1,4 +1,5 @@
-<% if(page.comments && theme.plugins.disqus_shortname){ %>
+<% var plugins = config.plugins || theme.plugins; %>
+<% if(page.comments && plugins.disqus_shortname){ %>
     <div class="blog-post-comments">
         <div id="disqus_thread">
             <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
