--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -7,7 +7,7 @@
       <ul>
         <li><a href="<%- url_for("/") %>">Home</a></li>
         <li><a href="<%- url_for("archives") %>">Writing</a></li>
-        <li><a href="<%- url_for(theme.projects_url) %>">Projects</a></li>
+        <li><a href="<%- url_for(config.projects_url || theme.projects_url) %>">Projects</a></li>
       </ul>
     </nav>
   </div>
