--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -4,16 +4,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <% var misc = config.miscellaneous || theme.miscellaneous; %>
     <%- open_graph({
         image:          thumbnail(page),
-        fb_app_id:      theme.miscellaneous.open_graph.fb_app_id,
-        fb_admins:      theme.miscellaneous.open_graph.fb_admins,
-        twitter_id:     theme.miscellaneous.open_graph.twitter_id,
-        google_plus:    theme.miscellaneous.open_graph.google_plus,
+        fb_app_id:      misc.open_graph.fb_app_id,
+        fb_admins:      misc.open_graph.fb_admins,
+        twitter_id:     misc.open_graph.twitter_id,
+        google_plus:    misc.open_graph.google_plus,
     }) %>
     <%- meta(page) %>
-    <% if (theme.customize.favicon) { %>
-        <link rel="icon" type="image/png" href="<%= url_for(theme.customize.favicon) %>" sizes="32x32" />
+    <% var customize = config.customize || theme.customize; %>
+    <% if (customize.favicon) { %>
+        <link rel="icon" type="image/png" href="<%= url_for(customize.favicon) %>" sizes="32x32" />
     <% } %>
     <!-- title -->
     <title><%= page.title ? page.title : config.title %></title>
@@ -23,7 +25,7 @@
     <%- css('lib/justified-gallery/justifiedGallery.min.css') %>
     <%- css('css/style') %>
     <!-- rss -->
-    <% if (theme.rss === '' && config.feed && config.feed.path) { %>
+    <% if (!theme.rss && config.feed && config.feed.path) { %>
       <% theme.rss = config.feed.path %>
     <% } %>
     <% if (theme.rss) { %>
