--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -1,20 +1,20 @@
 <%- js('lib/justified-gallery/jquery.justifiedGallery.min.js') %>
 <%- js('js/main') %>
 <!-- Google Analytics -->
-<% if (theme.plugins.google_analytics){ %>
+<% if (config.plugins && config.plugins.google_analytics){ %>
     <script type="text/javascript">
         (function(i,s,o,g,r,a,m) {i['GoogleAnalyticsObject']=r;i[r]=i[r]||function() {
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', '<%= theme.plugins.google_analytics %>', 'auto');
+        ga('create', '<%= config.plugins.google_analytics %>', 'auto');
         ga('send', 'pageview');
     </script>
 <% } %>
 <!-- Disqus Comments -->
-<% if (theme.plugins.disqus_shortname){ %>
+<% if (config.plugins && config.plugins.disqus_shortname){ %>
     <script type="text/javascript">
-        var disqus_shortname = '<%= theme.plugins.disqus_shortname %>';
+        var disqus_shortname = '<%= config.plugins.disqus_shortname %>';
 
         (function(){
             var dsq = document.createElement('script');
