Fix social links punctuation
If only two social links were provided, the result was `link, link` but should
have been `link and link`.

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -5,7 +5,7 @@
         <%- markdown(config.description) %>
       <% } %>
       <p style="display: inline">
-      <% if (theme.customize.social_links.twitter) { %>
+      <% if (theme.customize.social_links) { %>
         Find me on
         <ul id="sociallinks">
           <% for(var i in theme.customize.social_links) { %>
