--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -9,7 +9,7 @@
     content: ", "
   li:last-child:after
     content: ""
-  li:nth-last-child(3) ~ li:nth-last-child(2):after
+  li:nth-last-child(2):after
     content: " and "
 
 .post-list
