--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,6 +1,8 @@
 <header id="header">
     <a href="<%- url_for("/") %>">
-        <%- (theme.customize.logo && theme.customize.logo.enabled ? '<div class="logo"></div>':'') %>
+        <% if (theme.customize.logo && theme.customize.logo.enabled) { %>
+            <div class="logo" style="background-image: url(<%- url_for(theme.customize.logo.url) %>);"></div>
+        <% } %>
         <div id="title">
           <h1>
               <%= config.title %>
