--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,25 +1,17 @@
 <header id="header">
-    <a href="<%- url_for("/") %>">
-        <% if (theme.customize.logo && theme.customize.logo.enabled) { %>
-            <div class="logo" style="background-image: url(<%- url_for(theme.customize.logo.url) %>);"></div>
-        <% } %>
-        <div id="title">
-          <h1>
-              <%= config.title %>
-          </h1>
-          <% if (is_home() && config.subtitle) { %>
-          <h2>
-              <%= config.subtitle %>
-          </h2>
-          <% } else if (page.title) { %>
-          <h2>
-              <%= page.title %>
-          </h2>
-          <% } else if (config.subtitle) { %>
-          <h2>
-              <%= config.subtitle %>
-          </h2>
-          <% } %>
-        </div>
-    </a>
+  <a href="<%- url_for("/") %>">
+  <% if (theme.customize.logo && theme.customize.logo.enabled) { %>
+    <div id="logo" style="background-image: url(<%- url_for(theme.customize.logo.url) %>);"></div>
+  <% } %>
+    <div id="title">
+      <h1><%= config.title %></h1>
+    </div>
+  </a>
+  <div id="nav">
+    <ul>
+      <% for (var i in theme.nav) { %> 
+        <li><a href="<%- url_for(theme.nav[i]) %>"><%= i %></a></li>
+      <% } %>
+    </ul>
+  </div>
 </header>
