--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -24,11 +24,6 @@
       color: #666
       min-width: 100px
       margin-right: 16px
-  .post-more
-    float: right
-    margin-left: 116px
-    list-style-type: none
-
 
 @media (min-width: 480px)
   .post-list
@@ -36,8 +31,10 @@
       display: flex
       margin-bottom: 5px
       .meta
-        text-align: right
+        text-align: left
 
 .project-list
+  padding: 0
+  list-style: none
   .project-item
     margin-bottom: 5px
