--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -1,8 +1,8 @@
 // Fonts
-$font-family-body = "Meslo LG"
+$font-family-body = "Menlo", "Meslo LG", monospace
 $font-family-mono = "Menlo", "Meslo LG", monospace
 $font-family-tt = "Inconsolata", monospace
-$font-size = 15px
+$font-size = 14px
 $line-height = 1.725
 
 // Colors
