--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -72,9 +72,8 @@ body
 
   h1,
   .h1
-    text-transform: uppercase
     letter-spacing: 0.01em
-    font-size: 1rem
+    font-size: 1.5em
     font-style: normal
     font-weight: 700
     color: $color-accent
