--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -1,40 +1,63 @@
-#header 
+#header
   max-width: 710px
   width: 100%
-  margin: 0 auto 1rem auto
+  margin: 0 auto 3rem auto
 
-  h1,
-    .h1
-      text-transform: uppercase
-      letter-spacing: 0.01em
-      font-size: 1rem
-      font-style: normal
-      font-weight: 700
-      color: $color-accent
-      margin-top: 0
-      margin-bottom: 0
-      antialias()
-
-    h2,
-    .h2
-      position: relative
-      font-size: 1rem
-      font-weight: bold
-      text-transform: none
-      letter-spacing: normal
-      margin-top: 0
-      margin-bottom: 0
-      color: $color-lightest
+  h1, .h1
+    letter-spacing: 0.01em
+    font-size: 1.5rem
+    line-height: 2rem
+    font-style: normal
+    font-weight: 700
+    color: $color-text
+    margin-top: 0
+    margin-bottom: 0
+    antialias()
 
   a
     color: inherit
     text-decoration: none
     background: none
 
-  .logo
+  #logo
     float: left
     margin-right: 20px
     width: logo-width
     height: logo-height
     background-repeat: no-repeat
     background-size: logo-width logo-height
+    border-radius: 5px
+    -webkit-filter: grayscale(100%)
+    filter: grayscale(100%)
+
+  #nav
+    letter-spacing: 0.01em
+    font-size: .8rem
+    font-style: normal
+    font-weight: 200
+    color: $color-accent
+    ul
+      list-style-type: none
+      margin: 0
+      padding: 0
+      line-height: 15px
+      a
+        margin-right: 15px
+        color: color-accent
+      a:hover
+          underline(5px, $color-accent)
+      li
+        display: inline-block
+        vertical-align: middle
+        margin-right: 15px
+        border-right: 1px dotted $color-accent
+      li:last-child
+        border-right: 0
+        margin-right: 0
+        a
+          margin-right: 0
+
+#header:hover
+  #logo
+    -webkit-filter: none
+    filter: none
