Cleaner article style

--- a/source/css/_extend.styl
+++ b/source/css/_extend.styl
@@ -1,17 +1,46 @@
 $base-style
-    h1
-        font-size: 2em
-    h2
+    h1,
+    .h1
+        letter-spacing: 0.01em
         font-size: 1.5em
+        font-style: normal
+        font-weight: 700
+        color: $color-accent
+        margin-top: 3rem
+        margin-bottom: 1rem
+        display: block
+        antialias()
+    h2,
+    .h2
+        position: relative
+        font-size: 1rem
+        font-weight: bold
+        text-transform: none
+        letter-spacing: normal
+        margin-top: 2rem
+        margin-bottom: 0.5rem
+        color: $color-lightest
+        display: block
     h3
-        font-size: 1.3em
-    h4
-        font-size: 1.2em
-    h5
-        font-size: 1em
+        font-size: 0.9rem
+        font-weight: bold
+        text-decoration: underline;
+        color: $color-lightest
+    h4,
+    h5,
     h6
-        font-size: 1em
-        color: color-grey
+        font-size: 0.9rem
+        font-weight: normal
+        color: $color-light
+        border-bottom: 1px dashed $color-light
+        display: inline
+        text-decoration: none
+    h3,
+    h4,
+    h5,
+    h6
+        margin-top: 0.9rem
+        margin-bottom: 0.5rem
     hr
         border: 1px dashed $color-light
     strong
@@ -41,3 +70,17 @@ $base-style
         list-style: decimal
     dt
         font-weight: bold
+    table
+        width: 100%
+        font-size: $font-size - 2px
+        border-collapse: collapse
+        text-align: left
+    th
+        font-size: $font-size - 1px
+        font-weight: bold
+        color: $color-lightest
+        border-bottom: 1px dashed #ccc
+        padding: 8px 8px
+    td
+        border-bottom: none 
+        padding: 9px 8px 0px 8px
