--- a/source/css/syntax.styl
+++ b/source/css/syntax.styl
@@ -4,7 +4,7 @@
 
 .highlight
     color: #87928a
-    background: #171c19
+    background: lighten($color-background, 2%)
     .code
         /* Atelier-Savanna Comment */
         .comment,
