--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -45,24 +45,15 @@ article
             width: 100%
             height: 100%
             margin-top: 0
-    table
-        width: 100%
-        border-collapse: collapse
-        border-spacing: 0
-    th
-        font-weight: bold
-        border-bottom: 2px solid #ccc
-        padding-bottom: 0.5em
-    td
-        border-bottom: none 
-        padding: 10px 0
     blockquote
         background: inherit;
         color: #ccffb6
         border-left: 0px solid #ccc;
-        margin: 1.5em 10px;
+        margin: 1rem 10px;
         padding: 0.5em 10px;
         quotes: "\201C""\201D""\2018""\2019"
+        p
+          margin: 0
         &:before
             color: #ccffb6;
             content: "\201C";
