Support for different code colorschemes

--- a/source/css/_highlight/atelier-plateau-dark.styl
+++ b/source/css/_highlight/atelier-plateau-dark.styl
@@ -1,17 +1,17 @@
-/* Base16 Atelier Savanna Dark - Theme */
-/* by Bram de Haan (http://atelierbram.github.io/syntax-highlighting/atelier-schemes/savanna) */
+/* Base16 Atelier Plateau Dark - Theme */
+/* by Bram de Haan (http://atelierbram.github.io/syntax-highlighting/atelier-schemes/plateau) */
 /* Original Base16 color scheme by Chris Kempson (https://github.com/chriskempson/base16) */
 
 .highlight
-    color: #87928a
-    background: lighten($color-background, 2%)
+    color: #8a8585
+    background: #1b1818
     .code
-        /* Atelier-Savanna Comment */
+        /* Atelier-Plateau Comment */
         .comment,
         .quote
-            color: #78877d
+            color: #7e7777
 
-        /* Atelier-Savanna Red */
+        /* Atelier-Plateau Red */
         .variable,
         .template-variable,
         .attribute,
@@ -22,9 +22,9 @@
         .name,
         .selector-id,
         .selector-class
-            color: #b16139
+            color: #ca4949
 
-        /* Atelier-Savanna Orange */
+        /* Atelier-Plateau Orange */
         .number,
         .meta,
         .built_in,
@@ -32,35 +32,35 @@
         .literal,
         .type,
         .params
-            color: #9f713c
+            color: #b45a3c
 
-        /* Atelier-Savanna Green */
+        /* Atelier-Plateau Green */
         .string,
         .symbol,
         .bullet
-            color: #489963
+            color: #4b8b8b
 
-        /* Atelier-Savanna Blue */
+        /* Atelier-Plateau Blue */
         .title,
         .section
-            color: #478c90
+            color: #7272ca
 
-        /* Atelier-Savanna Purple */
+        /* Atelier-Plateau Purple */
         .keyword,
         .selector-tag
-            color: #55859b
+            color: #8464c4
 
         .deletion,
         .addition
-            color: #171c19
+            color: #1b1818
             display: inline-block
             width: 100%
 
         .deletion
-            background-color: #b16139
+            background-color: #ca4949
 
         .addition
-            background-color: #489963
+            background-color: #4b8b8b
 
         .emphasis
             font-style: italic
