--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -17,3 +17,6 @@ $ease-in-sine = cubic-bezier(0.47, 0, 0.745, 0.715)
 // Logo
 logo-width = 0px + hexo-config("customize.logo.width")
 logo-height = 0px + hexo-config("customize.logo.height")
+
+// Code Highlight
+highlight = hexo-config("customize.highlight") || "tomorrow-night"
