--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -105,7 +105,7 @@ body
 @import "_partial/footer"
 
 // Code
-@import 'syntax'
+@import "_highlight/" + highlight
 pre
   font-family: $font-family-mono
   font-size: 13px
@@ -126,10 +126,13 @@ pre code
   padding: 0
 
 .highlight
+  font-family: $font-family-mono;
+  background: lighten($color-background, 2%)
+  // color: $color-light
   -webkit-border-radius: 4px
   border-radius: 4px
   padding: 10px 15px
-  overflow: auto
+  overflow-x: auto
   margin: 1rem 0 1rem 0
   figcaption
     zoom: 1
@@ -150,6 +153,7 @@ pre code
   table
     width: auto
   td.gutter
-    padding: 20px
+    text-align: right
+    padding-right: 20px
     display: none
 
