Special menu for posts + Responsive menu for mobile

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -9,6 +9,9 @@
   </a>
   <div id="nav">
     <ul>
+      <li class="icon">
+        <a href="#"><i class="fa fa-bars fa-2x"></i></a>
+      </li>
       <% for (var i in theme.nav) { %> 
         <li><a href="<%- url_for(theme.nav[i]) %>"><%= i %></a></li>
       <% } %>
