--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -2,8 +2,13 @@
 <html<%= config.language ? " lang=" + config.language.substring(0, 2) : ""%>>
 <%- partial('_partial/head') %>
 <body>
+    <% if (is_post()) { %>
+      <%- partial('_partial/header_post') %>
+    <% } %>
     <div class="content index width mx-auto px2 my4">
-        <%- partial('_partial/header') %>
+        <% if (!is_post()) { %>
+          <%- partial('_partial/header') %>
+        <% } %>
         <%- body %>
       </div>
     <%- partial('_partial/footer') %>
