--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -98,6 +98,7 @@ body
 
 @import "_extend"
 @import "_partial/header"
+@import "_partial/header_post"
 @import "_partial/index"
 @import "_partial/article"
 @import "_partial/archive"
