Update README for v2

--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -7,7 +7,6 @@
   width: 100%
   margin: 0 auto 1rem auto
   vertical-align: top
-  text-align: center
   ul
     margin: 0
     padding: 0
@@ -17,13 +16,14 @@
     vertical-align: middle
     margin-right: 15px
     border-right: 1px solid #4a4a4a
+    a
+      margin-right: 15px
   li:last-child
     border-right: 0
     margin-right: 0
     a
       margin-right: 0
   a
-    margin-right: 15px
     color: #666
   a:hover
     color: #999
