Added separator, enlarged social icons
+ <hr>
+ .fa-2x for all fa icons

--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -13,6 +13,7 @@
   <div class="content" itemprop="articleBody">
     <%- page.content %>
   </div>
+  <hr>
   <span id="actions">
     <span id="i-prev" class="info" style="display:none;">Previous post</span>
     <span id="i-next" class="info" style="display:none;">Next post</span>
@@ -26,16 +27,16 @@
       <a class="icon" href="<%- url_for(page.next.path) %>"><i class="fa fa-chevron-right" aria-hidden="true" onmouseover='$("#i-next").toggle();' onmouseout='$("#i-next").toggle();'></i>  Next Article  </a>
       <% } %>
       <br>Share:
-      <a class="icon" href="http://www.facebook.com/sharer.php?u=<%= page.permalink %>"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-      <a class="icon" href="https://twitter.com/share?url=<%= page.permalink %>&text=<%= page.title %>"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-      <a class="icon" href="http://www.linkedin.com/shareArticle?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-      <a class="icon" href="https://pinterest.com/pin/create/bookmarklet/?url=<%= page.permalink %>&is_video=false&description=<%= page.title %>"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-      <a class="icon" href="mailto:?subject=<%= page.title %>&body=Check out this article: <%= page.permalink %>"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-      <a class="icon" href="https://getpocket.com/save?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fa fa-get-pocket" aria-hidden="true"></i></a>
-      <a class="icon" href="http://reddit.com/submit?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fa fa-reddit" aria-hidden="true"></i></a>
-      <a class="icon" href="http://www.stumbleupon.com/submit?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fa fa-stumbleupon" aria-hidden="true"></i></a>
-      <a class="icon" href="http://digg.com/submit?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fa fa-digg" aria-hidden="true"></i></a>
-      <a class="icon" href="http://www.tumblr.com/share/link?url=<%= page.permalink %>&name=<%= page.title %>&description=<%= page.excerpt %>"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
+      <a class="icon" href="http://www.facebook.com/sharer.php?u=<%= page.permalink %>"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
+      <a class="icon" href="https://twitter.com/share?url=<%= page.permalink %>&text=<%= page.title %>"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+      <a class="icon" href="http://www.linkedin.com/shareArticle?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+      <a class="icon" href="https://pinterest.com/pin/create/bookmarklet/?url=<%= page.permalink %>&is_video=false&description=<%= page.title %>"><i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></a>
+      <a class="icon" href="mailto:?subject=<%= page.title %>&body=Check out this article: <%= page.permalink %>"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+      <a class="icon" href="https://getpocket.com/save?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fa fa-get-pocket fa-2x" aria-hidden="true"></i></a>
+      <a class="icon" href="http://reddit.com/submit?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fa fa-reddit fa-2x" aria-hidden="true"></i></a>
+      <a class="icon" href="http://www.stumbleupon.com/submit?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fa fa-stumbleupon fa-2x" aria-hidden="true"></i></a>
+      <a class="icon" href="http://digg.com/submit?url=<%= page.permalink %>&title=<%= page.title %>"><i class="fa fa-digg fa-2x" aria-hidden="true"></i></a>
+      <a class="icon" href="http://www.tumblr.com/share/link?url=<%= page.permalink %>&name=<%= page.title %>&description=<%= page.excerpt %>"><i class="fa fa-tumblr fa-2x" aria-hidden="true"></i></a>
   </span>
 </article>
 <%- partial('_partial/comments') %>
