Small style fixes for mobile
- display article tags on a separate line on small screens
- split footer over two lines at 600px instead of at 480px
- `overflow-x: auto` on `pre`-blocks

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -98,10 +98,14 @@ article
     font-size: 1.5em
     line-height: 1.25
 
+
 .article-tag
-    display: inline
+  .tag-link
     &:before
-      content: "|"
-    .tag-link
-        &:before
-            content: "#"
+      content: "#"
+
+@media (min-width: 480px)
+  .article-tag
+      display: inline
+      &:before
+        content: "|"
