--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -33,7 +33,7 @@
     line-height: 20px
     vertical-align: middle
 
-@media (min-width: 480px)
+@media (min-width: 39rem)
   #footer
     padding-top: 20px
     padding-bottom: 20px
