--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -117,6 +117,7 @@ pre
   -webkit-border-radius: 4px
   border-radius: 4px
   border: 1px dotted #666
+  overflow-x: auto
 code
   -webkit-border-radius: 2px
   border-radius: 2px
