Mobile version of the post menu
- Created a mobile-friendly version of the post menu.
- Desktop menu is simplified on smaller screens (e.g. tablets).

This closes #5 and closes #6.

TODO: code needs some refactoring

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -3,14 +3,17 @@
 <%- partial('_partial/head') %>
 <body>
     <% if (is_post()) { %>
-      <%- partial('_partial/header_post') %>
+      <%- partial('_partial/post/actions_desktop') %>
     <% } %>
     <div class="content index width mx-auto px2 my4">
         <% if (!is_post()) { %>
           <%- partial('_partial/header') %>
         <% } %>
         <%- body %>
-      </div>
+    </div>
+    <% if (is_post()) { %>
+      <%- partial('_partial/post/actions_mobile') %>
+    <% } %>
     <%- partial('_partial/footer') %>
     <%- partial('_partial/scripts') %>
 </body>
