--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -99,7 +99,8 @@ body
 
 @import "_extend"
 @import "_partial/header"
-@import "_partial/header_post"
+@import "_partial/post/actions_desktop"
+@import "_partial/post/actions_mobile"
 @import "_partial/index"
 @import "_partial/article"
 @import "_partial/archive"
