--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,6 +1,6 @@
 <footer id="footer">
   <div class="footer-left">
-    Copyright &copy; <%= new Date().getFullYear() %> <%= config.title %>
+    Copyright &copy; <%= new Date().getFullYear() %> <%= config.author || config.title %>
   </div>
   <div class="footer-right">
     <nav>
