index.html append tags

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -38,3 +38,10 @@
   </ul>
 </section>
 <% } %>
+
+<section id="tags">
+    <span class="h1">Tags</span>
+    <div class="article-tag">
+        <%- list_tags({ show_count: false, style: 'link' }) %>
+    </div>
+</section>
