Some font-size's rendered larger on Safari

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -86,6 +86,8 @@ body
 
 @media (max-width: 480px)
   // smaller margins at smaller screen widths
+  body
+    -webkit-text-size-adjust: none
   .px3
     padding-left: 1rem
     padding-right: 1rem
