--- a/source/css/_partial/post/actions_desktop.styl
+++ b/source/css/_partial/post/actions_desktop.styl
@@ -89,7 +89,7 @@
     padding-top: 1rem
     a:hover
       color: $color-link
-    .toc-level-1
+    .toc-level-1 > .toc-link
       display: none
     .toc-level-2
       font-size: 0.8rem
