--- a/source/css/_partial/post/actions_mobile.styl
+++ b/source/css/_partial/post/actions_mobile.styl
@@ -86,7 +86,7 @@
         line-height: 30px
     a:hover
       color: $color-link
-    .toc-level-1
+    .toc-level-1 > .toc-link
       display: none
     .toc-level-2
       font-size: 0.8rem
