Implement pagination + group archive by year
- Show pagination links in the archive if the number of posts is larger than
`per_page` (closes #16)
- Group posts in the archive by year

--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -1,9 +1,19 @@
-<ul class="post-list">
-  <% page.posts.sort('date', 'desc').each(function(post) { %>
-    <li class="post-item">
-      <%- partial('_partial/post/date', { post: post, class_name: 'meta' }) %>
-      <span><%- partial('_partial/post/title', { post: post, index: true, class_name: '' }) %><span>
-    </li>
-  <% }); %>
-</ul>
-
+<div id="archive">
+  <ul class="post-list">
+    <% var year = 0 %>
+    <% var change = false %>
+    <% page.posts.sort('date', 'desc').each(function(post) { %>
+      <% var itemYear = date(post.date, 'YYYY') - 0 %>
+      <% change = year !== itemYear %>
+      <% year = change ? itemYear : year %>
+      <% if (change) { %>
+        <h2><%= year %></h2>
+      <% } %>
+      <li class="post-item">
+        <%- partial('_partial/post/date', { post: post, class_name: 'meta' }) %>
+        <span><%- partial('_partial/post/title', { post: post, index: true, class_name: '' }) %><span>
+      </li>
+    <% }); %>
+  </ul>
+  <%- partial('_partial/pagination') %>
+</div>
