--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -108,6 +108,7 @@ body
 @import "_partial/archive"
 @import "_partial/comments"
 @import "_partial/footer"
+@import "_partial/pagination"
 
 // Code
 @import "_highlight/" + highlight
