Add option to show all posts on home page

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -17,13 +17,21 @@
 <section id="writing">
   <span class="h1"><a href="<%- url_for("archives") %>">Writing</a></span>
   <ul class="post-list">
-    <% site.posts.sort('date', 'desc').limit(theme.customize.post_count || 5).each(function(post, i){ %>
+    <% if (theme.customize.show_all_posts) { %>
+      <% var show_posts = page.posts.sort('date', 'desc') %>
+    <% } else { %>
+      <% var show_posts = site.posts.sort('date', 'desc').limit(theme.customize.post_count || 5) %>
+    <% } %>
+    <% show_posts.each(function(post, i){ %>
       <li class="post-item">
         <%- partial('_partial/post/date', { post: post, class_name: 'meta' }) %>
         <span><%- partial('_partial/post/title', { post: post, index: true, class_name: '' }) %></span>
       </li>
     <% }); %>
   </ul>
+  <% if (theme.customize.show_all_posts) { %>
+    <%- partial('_partial/pagination') %>
+  <% } %>
 </section>
 
 <% if (site.data.projects) { %>
