Fixes codeblock issues
- Respect the `highlight: line_number` config option.
- Display empty lines.

Closes #42

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -161,6 +161,5 @@ pre code
     width: auto
   td.gutter
     text-align: right
-    padding-right: 20px
-    display: none
-
+  .line
+  	height: 22px
