Improve previous commit

--- a/source/css/_partial/post/actions_desktop.styl
+++ b/source/css/_partial/post/actions_desktop.styl
@@ -96,7 +96,7 @@
     max-width: 20em
     float: right
     overflow: auto
-    max-height: 100vh
+    max-height: calc(95vh - 7rem);
     a:hover
       color: $color-link
     .toc-level-1 > .toc-link
