--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -109,6 +109,7 @@ body
 @import "_partial/comments"
 @import "_partial/footer"
 @import "_partial/pagination"
+@import "_partial/search"
 
 // Code
 @import "_highlight/" + highlight
